Name:                country
Version:             0.1
Synopsis:            Country Service
Description:         Country Service
License:             MIT
Author:              Peter Wong
Maintainer:          peterwong1228@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.4

Executable country
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    aeson                     -any,
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    mtl                       >= 2     && < 3,
    snap-core                 -any,
    snap-server               -any

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
