Name:                country
Version:             0.1
Synopsis:            Country Service
Description:         Country Service
License:             MIT
Author:              Peter Wong
Maintainer:          peterwong1228@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.10

executable country
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Main.hs

  Build-depends:
    aeson                     -any,
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    cassava                   -any,
    containers                -any,
    snap-core                 -any,
    snap-server               -any,
    vector                    -any

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2

test-suite country-test
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test, src

  build-depends:
    aeson                     -any,
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    cassava                   -any,
    containers                -any,
    QuickCheck                == 2.9.2,
    snap-core                 -any,
    snap-server               -any,
    vector                    -any
