Name:                country
Version:             0.1
Synopsis:            Country Service
Description:         Country Service
License:             MIT
Author:              Peter Wong
Maintainer:          peterwong1228@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.10

executable country
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Main.hs

  Build-depends:
    aeson                     == 0.11.2.1,
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    cassava                   == 0.4.5.0,
    containers                == 0.5.7.1,
    HDBC                      == 2.4.0.1,
    HDBC-postgresql           == 2.3.2.4,
    snap-core                 == 1.0.0.0,
    snap-server               == 1.0.1.0,
    vector                    == 0.11.0.0

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2

test-suite country-test
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test, src

  build-depends:
    aeson                     == 0.11.2.1,
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    cassava                   == 0.4.5.0,
    containers                == 0.5.7.1,
    HDBC                      == 2.4.0.1,
    HDBC-postgresql           == 2.3.2.4,
    QuickCheck                == 2.9.2,
    snap-core                 == 1.0.0.0,
    snap-server               == 1.0.1.0,
    vector                    == 0.11.0.0
